--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
+    "react-table": "^5.6.0",
     "redux": "^3.6.0",
     "redux-promise": "^0.5.3"
   },
