--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.1",
     "lodash": "^4.17.4",
     "namor": "^1.0.1",
     "react": "^15.5.4",
