--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-redux": "^5.0.4",
     "react-table": "^5.6.0",
     "redux": "^3.6.0",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
